lab-work/lab-1/yaml/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: frontend
  name: frontend
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 4200
# Adding this, because I have no ingress controller and want to access this deployment
#  type: LoadBalancer
  selector:
    app: frontend
